# docent

./: .env.example  .gitignore  .mcp.json  =1.7  AGENTS.md  AI_CONTEXT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE.performance.md  CONTEXT.md  Docent_Architecture.md  HERMES.md  LICENSE  README.md  codex-done.txt  codex-review.txt  council-transcript-20260516_193313.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
.gstack/: browse-audit.jsonl
.gstack/security-reports/: 2026-05-07-cso.json
design_handover/: HANDOFF.md
design_handover/design_system/components/: ChatThread.jsx  Sidebar.jsx  app-index.html
design_handover/designs/: Reading.html
docs/: cli.md  ecosystem.md  plugin-guide.md  reading_spec.md
docs/adr/: 001-cli-mcp-fastapi-surfaces.md
docs/guides/: plugin-builder-guide.md  reading-user-guide.md  studio-user-guide.md
docs/ui-specs/: ecosystem-page.md  reading-ui-spec.md  studio-ui-spec.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/design_handover/: HANDOFF.md  HANDOFF_STUDIO.md
frontend/design_handover/design_handoff_dashboard/: HANDOFF.md
frontend/design_handover/design_system/: DESIGN_SYSTEM.md  colors_and_type.css
frontend/design_handover/designs/: Ecosystem-v1.html  Ecosystem-v2.html  Reading-v1.html  Reading-v2.html  Reading.html  Studio-v1.html  Studio.html  studio-form.jsx  studio-output.jsx  studio-shared.jsx
frontend/src/__tests__/: backup-actions.test.ts  reading-actions.test.ts  schema-form.test.ts  studio-run-manager.test.tsx
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: DetailModal.tsx  EditModal.tsx  HowToAddModal.tsx  OrderIndicator.tsx  PaperTable.tsx  ScreenSizeGate.tsx  Sidebar.tsx  StatsModal.tsx  StatusBadge.tsx  StatusBanner.tsx  TabGuard.tsx  Toast.tsx  WelcomeModal.tsx  WhatsNewToast.tsx
frontend/src/hooks/: useDarkMode.ts  useTour.ts
frontend/src/lib/: api-token.ts  app-run-context.tsx  notifications.tsx  reading-filters.ts  studio-run-context.tsx  toast-utils.ts  tour.ts  types.ts
memory/: MEMORY.md  build_progress.md  decisions.md  feedback_delegate_proactively.md  feedback_global_docent_install.md  feedback_memory_location.md  feedback_narrate_steps.md  feedback_oc_brief_conventions.md  feedback_opencode_for_agentic_tools.md  feedback_real_data_testing.md  feedback_research_tool_routing.md  feedback_two_file_api_sync.md  feedback_ui_testing_before_release.md  feedback_update_memory_after_task.md  gotchas.md  harness_principles.md  hermes.md  multimodel_workflow.md  output_shapes_deferred.md  project_breaking_changes_policy.md  project_codex_review_blockers.md  project_dashboard_page.md  project_feynman_budget_guard.md  project_feynman_port.md  project_obsidian_integration.md  project_opencode_limits.md  project_research_test_blockers.md  project_todos.md  project_ui_bundling.md  project_zotero_integration.md  reading_tool_rewrite_spec.md  release_plan.md  roadmap_post_phase1.md  thoughts_review_2026_04_29.md  ui_todos.md  vision_academic_workstation_analysis.md
memory/archive/: codex-review-2026-04-29.md  codex-review-blockers-done-2026-05.md  decisions-2026-04-foundation.md  decisions-2026-04-paper-build.md  decisions-2026-05-paper-sync-retired.md  decisions-2026-05-steps10-11.md  findings-2026-04-step-11-2.md  output-shapes-shipped-2026-05.md  paper-pipeline-port-plan-2026-05.md  project_feynman_budget_guard-shipped-2026-05-08.md  project_feynman_port-shipped-2026-05-08.md  project_research_test_blockers.md  project_ui_bundling-implemented-2026-05.md  project_ui_bundling-v2-proxy-2026-05.md  reading-tool-rewrite-spec-2026-05.md  research-test-blockers-fixed-2026-05.md  ui-todos-v1.0-2026-05.md
memory/tasks/: research_tool_real_life_tests.md  studio_real_life_tests.md  v120_ui_tests.md
memory/tasks/briefs/: concurrent-studio-runs-design.md  contract_tests_brief.md  docs-cli-v1_brief.md  p1_consolidate_studio_builders.md  p1_decouple_ui_mcp.md  research_tool_phase_f2.md  shapes_brief.md  test_shapes_brief.md
memory/tasks/done/: 2026-05-05-list-all-public-functions-in-srcdocenttoolspaperpy.md  2026-05-05-why-does-the-syncpull-action-skip.md  2026-05-07-brief-create-uispecwriter-slash-command.md  2026-05-07-brief-docent-cli-v10-docs-page.md  2026-05-07-brief-phase-a-secrets-scan-safecommit.md  2026-05-07-reply-with-exactly-the-word-pineapple.md  2026-05-07-task-add-toshapes-to-reading-result.md  2026-05-07-task-create-srcdocentcoreshapespy.md  2026-05-07-task-create-srcdocentuirendererspy.md  2026-05-08-brief-phase-f1-external-tool-update.md  2026-05-08-brief-phase-f2-oc-spend-tracking.md  2026-05-08-brief-research-tool-phase-a-feynman.md  2026-05-08-brief-research-tool-phase-c-lit.md  (+6 more)
oc_briefs/: phase_a_subagent_commands.md  phase_a_ui_spec_writer.md  step12_plugin_loader.md  step12_reading_migration.md
scripts/: build_ui.py  hermes_delegate.py  oc_delegate.py  prerelease.py  split_studio.py  update_next_release.py
scripts/briefs/: research_tool_phase_b.md
src/docent/: __init__.py  _banner.py  _version.py  cli.py  cli_doctor.py  cli_setup.py  errors.py  mcp_server.py  ui_server.py  whatsnew.py
tests/: conftest.py  eval_studio.py  test_backup_security.py  test_cite_graph.py  test_core_invoke.py  test_corrupt_json_recovery.py  test_database_dir.py  test_dispatcher.py  test_doc_flags.py  test_docs_route.py  test_doctor.py  test_errors.py  test_executor.py  test_fanout.py  test_feynman_budget.py  test_logging.py  test_mcp_http.py  test_mcp_server.py  test_mcp_surface.py  test_mendeley_cache.py  test_metadata_resolver.py  test_migrate_to_mendeley_truth.py  test_notebook_ask.py  test_notebook_auth.py  test_notebook_resolve.py  test_oc_client.py  test_plugin_builder.py  test_plugin_loader.py  test_prompt.py  test_prompts_registry.py  test_queue.py  test_queue_clear.py  test_queue_migration.py  test_queue_store.py  test_reader_overlay.py  test_reading_config.py  test_registry.py  test_research_pipeline.py  test_research_search.py  test_research_tavily_key.py  (+24 more)
(+297 files in other folders)
