[project]
name = "docent-cli"
version = "1.0.0"
description = "A personal control center for grad school workflows."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "John David K. T. Kudadjie", email = "75898705+Kudadjie@users.noreply.github.com" }
]
keywords = ["cli", "research", "reading-queue", "mendeley", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.83.0",
    "mcp>=1.0,<2",
    "pydantic-settings>=2.14.0",
    "rich>=15.0.0",
    "tomli-w>=1.2.0",
    "typer>=0.24.2",
]

[project.urls]
Homepage = "https://github.com/Kudadjie/docent"
Repository = "https://github.com/Kudadjie/docent"
"Bug Tracker" = "https://github.com/Kudadjie/docent/issues"

[project.scripts]
docent = "docent.cli:app"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "docent"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
