[project]
name = "docent-cli"
dynamic = ["version"]
description = "A personal control center for grad school workflows."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "John David K. T. Kudadjie", email = "75898705+Kudadjie@users.noreply.github.com" }
]
keywords = ["cli", "research", "reading-queue", "mendeley", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "tavily-python",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "litellm>=1.83.0",
    "mcp>=1.0,<2",
    "pydantic-settings>=2.14.0",
    "rich>=15.0.0",
    "tomli-w>=1.2.0",
    "typer>=0.24.2",
    "uvicorn[standard]>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/Kudadjie/docent"
Repository = "https://github.com/Kudadjie/docent"
"Bug Tracker" = "https://github.com/Kudadjie/docent/issues"

[project.scripts]
docent = "docent.cli:app"

[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/docent/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/docent"]
artifacts = ["src/docent/ui_dist/**"]

[dependency-groups]
dev = ["pytest>=8.0", "pip-audit>=2.7"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
