[project]
name = "docent-cli"
dynamic = ["version"]
description = "A personal control center for grad school workflows."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "John David K. T. Kudadjie", email = "75898705+Kudadjie@users.noreply.github.com" }
]
keywords = ["cli", "research", "reading-queue", "mendeley", "zotero", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = [
    "filelock~=3.12",
    "tavily-python~=0.7",
    "fastapi~=0.115",
    "httpx~=0.27",
    "litellm~=1.83",
    "mcp~=1.0",
    "packaging>=24.0",
    "pydantic-settings~=2.14",
    "rich~=15.0",
    "tomli-w~=1.2",
    "typer~=0.24",
    "uvicorn[standard]~=0.30",
    "notebooklm-py[browser]~=0.3",
    "alphaxiv-py~=0.5",
    "scholarly~=1.7",
    "ddgs~=9.0",
    "tenacity~=9.0",
    "pyzotero~=1.5",
]

[project.optional-dependencies]
backup = [
    "google-api-python-client~=2.100",
    "google-auth-oauthlib~=1.0",
    "google-auth-httplib2~=0.2",
]

[project.urls]
Homepage = "https://github.com/Kudadjie/docent"
Repository = "https://github.com/Kudadjie/docent"
"Bug Tracker" = "https://github.com/Kudadjie/docent/issues"

[project.scripts]
docent = "docent.cli:app"

[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/docent/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/docent"]
artifacts = ["src/docent/ui_dist/**"]

# Ship CHANGELOG.md and user-facing docs inside the package so the CLI banner,
# UI toast, and /api/docs/* routes work in packaged (non-editable) installs.
[tool.hatch.build.targets.wheel.force-include]
"CHANGELOG.md" = "docent/CHANGELOG.md"
"docs/cli.md" = "docent/docs/cli.md"
"docs/ecosystem.md" = "docent/docs/ecosystem.md"
"docs/plugin-guide.md" = "docent/docs/plugin-guide.md"
"docs/guides/reading-user-guide.md" = "docent/docs/guides/reading-user-guide.md"
"docs/guides/studio-user-guide.md" = "docent/docs/guides/studio-user-guide.md"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-timeout>=2.3", "pip-audit>=2.7", "ruff>=0.9", "mypy>=1.13"]

[tool.uv]
default-groups = ["dev"]
# Floor transitive deps with known CVEs. These are not direct deps but must
# meet minimum safe versions. Update when pip-audit flags new advisories.
constraint-dependencies = [
    "idna>=3.15",        # CVE-2026-45409
    "starlette>=1.0.1",  # PYSEC-2026-161
    "urllib3>=2.7.0",    # PYSEC-2026-142, PYSEC-2026-141
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
timeout = 60
markers = [
    "eval: slow golden-set eval tests (deselect with '-m not eval')",
    "integration: tests that require real network access or external services (deselect with '-m not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
# _version.py is generated by hatch-vcs on every build/sync and is not
# ruff-formatted, so it would trip `ruff format --check` in CI. Exclude it.
extend-exclude = ["src/docent/_version.py"]

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes (both on by default), plus:
#   I  = isort import ordering
#   UP = pyupgrade (modernise syntax for the 3.12 floor)
#   B  = flake8-bugbear (likely-bug patterns)
select = ["E", "F", "W", "I", "UP", "B"]
# E501 (line too long) is handled by the formatter, not the linter, and the
# codebase has intentional long strings (error messages, URLs).
# B904 (raise ... from): the bulk of the call sites raise typer.Exit / domain
#   errors as control flow where chaining adds noise; revisit per-site later.
# B008 (call in default arg): used deliberately for Typer Option/Argument.
# UP047 (PEP-695 generic syntax): not worth rewriting the core @register_tool
#   decorator's TypeVar form for a cosmetic modernisation.
ignore = ["E501", "B008", "B904", "UP047"]

[tool.ruff.lint.per-file-ignores]
# Tests favour readability over lint purity (long fixtures, unused imports in
# parametrised cases, bare asserts).
"tests/**" = ["B", "E402"]

[tool.mypy]
# Introduced incrementally (see the `files` scope below). The goal is to ratchet
# coverage outward from the central packages, not to type-gate the whole tree at
# once. Expand `files` as modules are annotated to pass.
python_version = "3.12"
files = ["src/docent"]
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
no_implicit_optional = true
